--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -197,3 +197,23 @@ a {
   left: unset !important;
   top: unset !important;
 }
+
+.spinner {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: conic-gradient(#0000 10%, #bdbdcc);
+  -webkit-mask: radial-gradient(
+    farthest-side,
+    #0000 calc(100% - 3.8px),
+    #000 0
+  );
+  animation: spinner-zp9dbg 1s infinite linear;
+  margin: 0 auto;
+}
+
+@keyframes spinner-zp9dbg {
+  to {
+    transform: rotate(1turn);
+  }
+}
