update comments, submit comments - and make the score dynamic based on comment submission

--- a/src/components/templates/product/commentForm.module.css
+++ b/src/components/templates/product/commentForm.module.css
@@ -129,3 +129,9 @@
 .user_comments section:last-child {
   border: none;
 }
+
+.error {
+  color: red;
+  font-size: 0.85rem;
+  margin-top: 0.3rem;
+}
